fixed issue where error message would break input's label transition on login/register form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,10 @@
     --white: #fff;
     --black: #070707;
     --blue: rgb(51, 97, 145);
-    --darkblue1: #284C83;
-    --red: #9c1f1f;
+    --darkblue: #284C83;
+    --red: #961d1d;
     --grey: #adadad;
-    --offwhite: #e0e0e0;
+    --offwhite: #e4e4e4;
     --gradient: linear-gradient(0deg, #4b8db1 0%, #1a3270 100%);
     --whitegradient: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgb(218, 218, 218) 100%);
 
@@ -61,22 +61,23 @@ body{
         text-decoration: none;
     }
 
-    /* .btn{
-        width: fit-content;
+    .btn {
         height: fit-content;
-        padding: 15px;
-        border: none;
-        border-radius: 15px;
-        text-decoration: none;
-        font-size: 20px;
+        background-color: var(--white);
+        border-radius: 24px;
+        border-style: none;
         cursor: pointer;
+        font-size: 20px;
+        padding: 15px;
+        text-align: center;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         transition: all 250ms ease;
     }
-
-    .btn:hover{
-        box-shadow: #313131 0px 10px 10px -10px;
+    
+    .btn:hover {
         background-color: var(--offwhite);
-    } */
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;    
+    }
 
     .add-btn{
         border: 2px solid var(--white);
@@ -86,26 +87,7 @@ body{
     .add-btn:hover{
         box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;        
         background-color: transparent;
-    }
-    
-    /* CSS */
-    .btn {
-        height: fit-content;
-        background-color: #fff;
-        border-radius: 24px;
-        border-style: none;
-        box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-        cursor: pointer;
-        font-size: 20px;
-        padding: 15px;
-        text-align: center;
-        transition: all 250ms ease;
-    }
-    
-    .btn:hover {
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    }
-    
+    }    
 
     button{
         cursor: pointer;
@@ -148,7 +130,7 @@ body{
 
     .nav-title{
         display: none;
-        color: var(--darkblue1);
+        color: var(--darkblue);
         position: fixed;
         margin-left: -500px;
         z-index: 10;
@@ -207,7 +189,7 @@ body{
     
     .change .bar1{
         transform: translate(0, 10px) rotate(-45deg);
-        background-color: var(--darkblue1);
+        background-color: var(--darkblue);
     }
     
     .change .bar2 {
@@ -216,7 +198,7 @@ body{
     
     .change .bar3 {
       transform: translate(0, -10px) rotate(45deg);
-      background-color: var(--darkblue1);
+      background-color: var(--darkblue);
     }
 
 /* FOOTER */
@@ -355,8 +337,8 @@ body{
         align-items: center;
         gap: 10px;
         height: 100%;
-        min-width: fit-content;
-        width: 30vw;
+        width: fit-content;
+        max-width: 40vw;
         backdrop-filter: blur(20px);
         color: var(--white);
         font-size: 20px;
@@ -370,6 +352,7 @@ body{
 
     .input-box input{
         width: 90%;
+        min-height: fit-content;
         height: 100%;
         outline: none;
         border: 1px solid var(--white);
@@ -380,11 +363,6 @@ body{
         padding-top: 30px;      
         font-size: 18px;
         color: var(--white);
-    }
-
-    .input-box input::placeholder{
-        color: var(--white);
-        margin: 5px;
     }
 
     .input-box i{
@@ -423,6 +401,7 @@ body{
 
     .login-register-link{
         text-decoration: none;
+
     }
 
     .login-register-link:hover{
@@ -431,6 +410,17 @@ body{
 
     .terms-link{
         font-weight: 700;
+    }
+
+    .login-register ul{
+        list-style-type: none;
+        width: 100%;
+        top: 90px;
+        margin: 0;
+        padding: 0;
+        z-index: 1;
+        font-weight: 500;
+        
     }
 
     .floating-label {
@@ -442,10 +432,12 @@ body{
         opacity: 1;
         pointer-events: none;
 		transition: all 250ms ease;
+        z-index: 2;
 	}
 
 	.input-box > .floating-label:has(+input:focus),
-    .input-box > .floating-label:has(+input:not(:focus):valid)
+    .input-box > .floating-label:has(+input:not(:placeholder-shown))
+    /* .input-box > .floating-label:has(+input:not(:focus):valid) */
     {
         top: 25%;
 		transform: translateY(-50%);
@@ -519,7 +511,7 @@ body{
     }
 
     .niveau h2 a{
-        color: var(--darkblue1) !important;
+        color: var(--darkblue) !important;
     }
 
     .etapes-wrapper{
@@ -791,7 +783,7 @@ body{
                 gap: 10px;
                 min-width: fit-content;
                 width: 50%;
-                background-color: var(--darkblue1);
+                background-color: var(--darkblue);
                 transition: background-color 1000ms ease-in-out;
             }
 
@@ -980,7 +972,7 @@ body{
 
     .nav-link a{
         font-size: 35px;
-        color: var(--darkblue1);
+        color: var(--darkblue);
     }
 
     .nav-link a:hover{
@@ -1001,7 +993,7 @@ body{
     .line-change{
         width: 100%;
         height: 2px;
-        background-color: var(--darkblue1);
+        background-color: var(--darkblue);
         margin: 2px 0;
     }
 
